2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* gui/component/addressbook-component.c: (ensure_sources):
	* gui/component/addressbook-migrate.c: (create_groups):
	Oops, remove comments I shouldn't have committed.

2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* gui/component/addressbook-component.c: (ensure_sources):
	* gui/component/addressbook-migrate.c: (create_groups):
	Enable autocompletion on personal addressbook when creating it
	(Mandriva bug #16427).

2005-04-28  Ross Burton  <ross@burtonini.com>

	* gui/widgets/e-addressbook-view.c:
	* gui/widgets/eab-contact-display.c:
	Fix some memory leaks.

2005-04-04  Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/component/addressbook.c (load_source_auth_cb)
         (addressbook_authenticate) : get the uri from Ebook
       instead of Esource. e_source_get_uri returns NULL when
       it does not have a reference to source group with it
       which happens when the source list from which this source
       was taken is destroyed but Ebook has reference to that source.
       e_book_get_uri returns the same uri and it will be always present
       Fixes #73330

2005-04-03  Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/widgets/eab-gui-util.c (do_copy) :
       use eab_merging_book_add_contact instead of
       e_book_async_add_contact to take care of duplicate
       checking
       Fixes #74255

2005-03-03   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/component/addressbook.c (load_source_auth_cb):
	Make sure LoadSourceData has call back installed
	before calling it. cb is NULL when called from 
	auth_required_cb 
	Fixes #73206 
	
2005-02-26   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/widgets/e-addressbook-view.c :
	Change the e-popup item type for "Cut"
	from E_POPUP_BAR to E_POPUP_ITEM
	
	Fixes #73013

2005-02-25   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/conact-editor/eab-editor.c 
	(eab_editor_prompt_to_save_changes) : Just close 