@@ -1,3 +1,9 @@
+2005-08-20  Sushma Rai  <rsushma@novell.com>
+
+	* gui/widgets/eab-contact-display.c (render_contact): Using
+	 gtk_html_stream_printf() with format specifier. Vulnerability patch
+	submitted by "Sitic Vulnerability Advisory <sitic@pts.se>"
+
 2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* gui/component/addressbook-component.c: (ensure_sources):
